# pyc

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
m4/: mode.m4
src/: Makefile.am  example.c  example.h
test/: Makefile.am  test.c  test.py
